# SmartLibrarian_RAG_OpenAI_API

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  compose.yaml  devbox.json  pyproject.toml
.github/: copilot-instructions.md
chroma_db/: chroma.sqlite3
data/: book_summaries.json  book_summaries.md
src/ragbot/: __init__.py  chat.py  config.py  data_loader.py  image_gen.py  indexer.py  openai_retry.py  retriever.py  safety.py  stt.py  tools.py  tts.py  ui_cli.py  web_api.py
src/ragbot/web/: index.html
tests/: test_audio_helpers.py  test_chat.py  test_config.py  test_data_loader.py  test_image_gen.py  test_indexer.py  test_openai_retry.py  test_retriever.py  test_safety.py  test_tools.py  test_web_api_validation.py
